Change to arabic

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -55,6 +55,7 @@
       line-height: 22px;
       font-family: "Roboto",Sans-Serif;
       cursor: pointer;
+      color: #fff;
       &:hover{
         color: #00a0f0;
 
