--- a/app/assets/stylesheets/menu.scss
+++ b/app/assets/stylesheets/menu.scss
@@ -143,3 +143,8 @@ button[aria-expanded="true"]> i{
     display: none !important;
   }
 }
+.language-controller{
+  background-color: transparent;
+  padding: 5px;
+  border-radius: 4px;
+}
