--- a/app/views/home/_form.html.erb
+++ b/app/views/home/_form.html.erb
@@ -1,10 +1,10 @@
 <div class="reviews-left-side reviews-sides">
   <div class="reviews-right-form-container">
     <div class="appointment-form-top-text">
-      Always there to care.
+      <%= t :always_there %>
     </div>
     <div class="appointment-form-heading">
-      Ask PlusOne Expert
+      <%= t :ask_plus_one_expert %>
     </div>
     <div id="helpBlock" class="help-block"></div>
     <%= form_for(@booking, :html => {:remote => true}) do |f| %>
