--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,9 +1,9 @@
 <% provide(:title, 'Booking') %>
 <section class="slider">
-  <div class="slider-back-image-container">
+  <div class="slider-back-image-container-contact">
     <div class="slider-text-container">
       <div class="slider-heading heading-lg">
-        Contact US
+        <%= t :contact %>
       </div>
       <div class="slider-text white-text">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam beatae, doloremque earum molestias repudiandae vel?
