--- a/app/assets/stylesheets/d-utiltity.scss
+++ b/app/assets/stylesheets/d-utiltity.scss
@@ -33,7 +33,7 @@
   font-weight: 300;
   letter-spacing: 0px;
   text-transform: none;
-  text-align: right;
+  //text-align: right;
 }
 heading-md{
   color: #181c1b;
