--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -3,10 +3,10 @@
       <div class="slider-back-image-container">
         <div class="slider-text-container">
           <div class="slider-heading heading-lg">
-            About us
+           <%= t :about_us %>
           </div>
           <div class="slider-text white-text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam beatae, doloremque earum molestias repudiandae vel?
+          <%= t :about_us_text %>
           </div>
         </div>
       </div>
