--- a/app/assets/stylesheets/menu.scss
+++ b/app/assets/stylesheets/menu.scss
@@ -148,3 +148,9 @@ button[aria-expanded="true"]> i{
   padding: 5px;
   border-radius: 4px;
 }
+.align-right{
+  position: absolute;
+  right: 15px;
+  z-index: 99;
+  top: 30px;
+}
