--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -28,7 +28,7 @@
           <i class="fa fa-bars"></i>
         </div>
         <div>
-          <select class="language-controller" id="language-change">
+          <select class="language-controller language-change" id="language-change">
 
             <option value="en">English</option>
 
@@ -51,16 +51,24 @@
     <div class="collapse navbar-collapse nav-bar-collapse-data" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link nav-link-mb" href="<%= root_path %>">Home </a>
+          <a class="nav-link nav-link-mb" href="<%= root_path %>"><%= t :home %> </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link nav-link-mb" href="<%= about_path %>">About us </a>
+          <a class="nav-link nav-link-mb" href="<%= about_path %>"><%= t :about_us %> </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link nav-link-mb nav-link-mb-b-0" href="<%= contact_path%>">Contact </a>
+          <a class="nav-link nav-link-mb nav-link-mb-b-0" href="<%= contact_path%>"> <%= t :contact %></a>
         </li>
 
       </ul>
+    </div>
+    <div class="align-right">
+      <select class="language-controller language-change" id="language-change">
+
+        <option value="en">English</option>
+
+        <option value="ar">Arabic</option>
+      </select>
     </div>
   </nav>
 
