--- a/app/views/home/_working_hours.html.erb
+++ b/app/views/home/_working_hours.html.erb
@@ -87,7 +87,7 @@
             </div>
             <div class="health-card-dot-name"></div>
             <div class="health-card-time-slot">
-              CLOSED
+              <%= t  :closed %>
             </div>
           </div>
         </div>
