--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -44,7 +44,7 @@
       </div>
     </div>
   </div>
-  <section class="services-section <%= is_arabic? ? 'text-right-custom': '' %>">
+  <section class="services-section  <%= is_arabic? ? 'text-right-custom': '' %>" style="direction: ltr">
     <div class="services-container">
       <div class="services-item">
         <div class="services-icon">
