--- a/app/assets/stylesheets/menu.scss
+++ b/app/assets/stylesheets/menu.scss
@@ -68,6 +68,7 @@
 .phone-container{
   padding-right: 20px;
   border-right: 1px dashed #ccc;
+  white-space: nowrap;
 }
 .logo-image{
   position: absolute;
