--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -11,8 +11,8 @@
     </div>
   </div>
 </section>
-<section class="reviews-container">
-  <div class="reviews-inner-container">
+<section class="reviews-container ">
+  <div class="reviews-inner-container  <%= is_arabic? ? 'text-right-custom': '' %>">
 
     <%= render partial: 'form' %>
 
